# proxy-autoconfig

./: .gitignore  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  config.toml  proxy-autoconfig.service  proxy.pac.template  user-rules.txt
proxy-auto-config/: Cargo.toml
proxy-autoconfig/: Cargo.toml
proxy-autoconfig/src/: generator.rs  main.rs
src/: main.rs
