[package]
name = "proxy-helper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
hyper = { version = "0.14.11", features = ["server"] }
mime = "0.3.16"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.8"
tower-http = { version = "0.1.1", features = [ "fs" ] }
