[package]
name = "autoconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.50", features = ["static-files"] }
tokio = { version = "1.24.0", features = ["macros", "rt-multi-thread"] }
